--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,9 @@ doc/api/
 .dart_tool/package_config.json
 .dart_tool/package_config.json
 .packages
+.dart_tool/package_config.json
+.dart_tool/package_config_subset
+.packages
+windows/flutter/generated_plugin_registrant.cc
+windows/flutter/generated_plugin_registrant.h
+windows/flutter/generated_plugins.cmake
