--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,9 @@ doc/api/
 windows/flutter/generated_plugin_registrant.cc
 windows/flutter/generated_plugin_registrant.h
 windows/flutter/generated_plugins.cmake
+.dart_tool/package_config.json
+.dart_tool/package_config_subset
+.packages
+windows/flutter/generated_plugin_registrant.cc
+windows/flutter/generated_plugin_registrant.h
+windows/flutter/generated_plugins.cmake
